# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gst-nmos-rs"
description = "GStreamer NMOS plugin (nmossrc / nmossink) talking to nvnmosd over gRPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
name = "gstnmos"
crate-type = ["cdylib", "rlib"]

[dependencies]
glib = "0.21.5"
gstreamer = "0.24.4"
gstreamer-base = "0.24.4"

nvnmos-rpc = { path = "../nvnmos-rpc" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
gst-plugin-version-helper = "0.8.3"
