# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gst-nmos-rs"
description = "GStreamer NMOS plugin (nmossrc / nmossink) talking to nvnmosd over gRPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
name = "gstnmos"
crate-type = ["cdylib", "rlib"]

[dependencies]
glib = "0.21.5"
gstreamer = "0.24.4"
gstreamer-base = "0.24.4"
gstreamer-sdp = "0.24.4"

nvnmos-rpc = { path = "../nvnmos-rpc" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# POSIX getifaddrs for resolving an IPv4/IPv6 host address back to its
# kernel interface name (NMOS carries IP, GStreamer udpsrc/udpsink want
# `multicast-iface=<name>`).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["net"] }

[dev-dependencies]
tempfile = { workspace = true }
# Used by the multi-flow integration test (tests/multi_flow_video_data.rs)
# to drive a v210 + ANC producer and pull samples back out of appsinks,
# mirroring gst-mxl-rs's tests/video_data_sync.rs setup.
gstreamer-app = "0.24.4"
gstreamer-video = { version = "0.24.5", features = ["v1_24"] }

[build-dependencies]
gst-plugin-version-helper = "0.8.3"
