# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gst-nmos-rs"
description = "GStreamer NMOS plugin (nmossrc / nmossink) talking to nvnmosd over gRPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
name = "gstnmos"
crate-type = ["cdylib", "rlib"]

[dependencies]
glib = "0.21.5"
gstreamer = "0.24.4"
gstreamer-base = "0.24.4"
gstreamer-audio = "0.24.4"
gstreamer-sdp = "0.24.4"

nvnmos-rpc = { path = "../nvnmos-rpc" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }

anyhow = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unicase = "2.9.0"
regex = "1.12"
url = "2.5"

# POSIX getifaddrs for resolving an IPv4/IPv6 host address back to its
# kernel interface name (NMOS carries IP, GStreamer udpsrc/udpsink want
# `multicast-iface=<name>`).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["net"] }

[dev-dependencies]
tempfile = { workspace = true }
# Runtime test skipping (prints a libtest-style `... skipped, <reason>` line).
test-skip = { path = "../test-skip" }
# Used by the IS-08 audio integration test to push test tones into the
# daemon-backed pipeline and pull samples back out of appsinks.
gstreamer-app = "0.24.4"
# Aligned A/V test sources (avsyncvideotestsrc / avsyncaudiotestsrc) and the
# recovery-side analysis helpers used by the end-to-end sync test.
gst-avsynctest-rs = { path = "../gst-avsynctest-rs" }
# CDP parser for decoding the recovered CEA-708 captions in the sync test.
cdp-types = "0.3"

[build-dependencies]
gst-plugin-version-helper = "0.8.3"
