# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nvnmos-rpc"
description = "gRPC protocol for the nvnmosd NMOS daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
protobuf-src.workspace = true
