# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nvnmosd"
description = "NMOS daemon: wraps libnvnmos and serves the NvnmosDaemon gRPC service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = "nvnmosd"
path = "src/main.rs"

[dependencies]
nvnmos = { path = "../nvnmos" }
nvnmos-rpc = { path = "../nvnmos-rpc" }

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
