# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nvnmosd"
description = "NMOS daemon: wraps libnvnmos and serves the NvnmosDaemon gRPC service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
name = "nvnmosd"
path = "src/lib.rs"

[[bin]]
name = "nvnmosd"
path = "src/main.rs"

[dependencies]
nvnmos = { path = "../nvnmos" }
nvnmos-rpc = { path = "../nvnmos-rpc" }

tokio = { workspace = true, features = ["time"] }
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
hyper-util = { workspace = true }
nvnmos-rpc = { path = "../nvnmos-rpc" }
tempfile = { workspace = true }
tonic.workspace = true
tokio = { workspace = true, features = ["time"] }
tower.workspace = true

